# KanasBodyFramework

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.md  main.cpp  main_hot_reload.cpp  plugin.hpp  readme.md  todo.md  update_guide.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
debug/: resolve_symbols.py  resolve_symbols_example.bat
kbf/: kbf.cpp  kbf.hpp  kbf_instance.hpp
kbf/cimgui/: cimgui.h  cimgui_funcs.hpp
kbf/data/: kbf_data_manager.cpp  kbf_data_manager.hpp
kbf/data/armour/: armour_id.hpp  armour_info.hpp  armour_list.cpp  armour_list.hpp  armour_piece.hpp  armour_set.hpp  find_object_armours.hpp  format_full_armour_id.hpp
kbf/data/bones/: bone_cache.hpp  bone_cache_manager.cpp  bone_cache_manager.hpp  bone_modifier.hpp  bone_symmetry_utils.hpp  common_bones.hpp  default_bones.hpp  hashed_bone_list.hpp  sortable_bone_modifier.hpp
kbf/data/fbs_compat/: fbs_armour_set_compat.hpp  fbs_preset.hpp
kbf/data/file/: cache_manager.hpp  field_parsers.hpp  kbf_file_type.hpp  kbf_file_upgrader.cpp  kbf_file_upgrader.hpp
kbf/data/formats/: format_metadata.hpp  kbf_file_data.hpp  kbf_settings.hpp
kbf/data/ids/: armour_list_ids.hpp  bone_cache_ids.hpp  config_ids.hpp  font_symbols.hpp  material_cache_ids.hpp  part_cache_ids.hpp  preset_group_ids.hpp  preset_ids.hpp  settings_ids.hpp
kbf/data/mesh/: hashed_part_list.hpp  mesh_part.hpp  part_cache.hpp  part_cache_manager.cpp  part_cache_manager.hpp
kbf/data/mesh/materials/: hashed_material_list.hpp  material_cache.hpp  material_cache_manager.cpp  material_cache_manager.hpp  mesh_material.hpp
kbf/data/mesh/parts/: hashed_part_list.hpp  mesh_part.hpp  part_cache.hpp  part_cache_manager.cpp  part_cache_manager.hpp
kbf/data/player/: player_data.hpp
kbf/data/preset/: override_material.hpp  override_mesh_part.hpp  player_override.hpp  preset.hpp  preset_defaults.hpp  preset_group.hpp  preset_group_defaults.hpp  preset_piece_settings.hpp  quick_material_override.hpp
kbf/debug/: debug_stack.hpp
kbf/enums/: body_part.hpp  cutscene_id.hpp
kbf/gui/: kbf_window.cpp  kbf_window.hpp
kbf/gui/components/toggle/: imgui_offset_rect.h  imgui_toggle.cpp  imgui_toggle.h  imgui_toggle_math.h  imgui_toggle_palette.cpp  imgui_toggle_palette.h  imgui_toggle_presets.cpp  imgui_toggle_renderer.cpp  imgui_toggle_renderer.h
kbf/gui/panels/: i_panel.hpp  unique_panel.hpp
kbf/gui/panels/info/: info_popup_panel.cpp  info_popup_panel.hpp
kbf/gui/panels/lists/: bone_panel.cpp  bone_panel.hpp  material_panel.cpp  material_panel.hpp  part_panel.cpp  part_panel.hpp  part_remover_panel.cpp  part_remover_panel.hpp  player_list_panel.cpp  player_list_panel.hpp  preset_group_panel.cpp  preset_group_panel.hpp  preset_panel.cpp  preset_panel.hpp
kbf/gui/panels/presets/: combine_presets_panel.cpp  combine_presets_panel.hpp  create_preset_group_from_bundle_panel.cpp  create_preset_group_from_bundle_panel.hpp  create_preset_group_panel.cpp  create_preset_group_panel.hpp  create_preset_panel.cpp  create_preset_panel.hpp  edit_material_param_panel.cpp  edit_material_param_panel.hpp  edit_player_override_panel.cpp  edit_player_override_panel.hpp  edit_preset_group_panel.cpp  edit_preset_group_panel.hpp  edit_preset_panel.cpp  edit_preset_panel.hpp  import_fbs_presets_panel.cpp  import_fbs_presets_panel.hpp
kbf/gui/panels/share/: export_panel.cpp  export_panel.hpp
kbf/gui/shared/: alignment.hpp  bone_slider.hpp  delete_button.hpp  drag_selectable.hpp  is_table_cell_hovered.hpp  preset_selectors.hpp  sex_marker.hpp  styling_consts.hpp  tab_bar_separator.hpp  tick_mark.hpp  toggle_colours.hpp
kbf/gui/tabs/about/: about_tab.cpp  about_tab.hpp
kbf/gui/tabs/debug/: debug_tab.cpp  debug_tab.hpp
kbf/gui/tabs/editor/: bone_modifier_info_widget.hpp  editable_object.hpp  editor_tab.cpp  editor_tab.hpp
kbf/gui/tabs/npc/: npc_tab.cpp  npc_tab.hpp
kbf/gui/tabs/player/: player_tab.cpp  player_tab.hpp
kbf/gui/tabs/preset_groups/: preset_groups_tab.cpp  preset_groups_tab.hpp
kbf/gui/tabs/presets/: presets_tab.cpp  presets_tab.hpp
kbf/gui/tabs/settings/: settings_tab.cpp  settings_tab.hpp
kbf/gui/tabs/share/: share_tab.cpp  share_tab.hpp
kbf/hook/: hook_manager.hpp
kbf/mesh/: bone_manager.cpp  bone_manager.hpp  material_manager.cpp  material_manager.hpp  part_manager.cpp  part_manager.hpp
kbf/npc/: armour_id_to_npc_id.hpp  get_npc_id.hpp  get_npc_name.hpp  get_npc_name_from_armour.hpp  npc_cache.hpp  npc_fetch_flags.hpp  npc_id.hpp  npc_info.hpp  npc_tracker.cpp  npc_tracker.hpp  persistent_npc_info.hpp
kbf/player/: persistent_player_info.hpp  player_cache.hpp  player_fetch_flags.hpp  player_info.hpp  player_tracker.cpp  player_tracker.hpp
kbf/profiling/: cpu_profiler.cpp  cpu_profiler.hpp  profiling_block.hpp  profiling_sample.hpp
kbf/situation/: custom_situation.hpp  known_situation.hpp  lobby_type.hpp  situation_watcher.cpp  situation_watcher.hpp
kbf/util/font/: default_font_sizes.hpp
kbf/util/hash/: hash_combine.hpp  pair_hash.hpp  ptr_hasher.hpp
kbf/util/io/: get_relative_subfolder.hpp  kbf_asset_path.hpp  noc_impl.hpp
kbf/util/re_engine/: check_re_ptr_validity.hpp  dump_components.hpp  dump_transform_tree.hpp  find_transform.hpp  print_re_object.hpp  re_memory_ptr.hpp  re_object.hpp  re_object_properties_to_string.hpp  re_singleton.hpp  read_re_memory.hpp  reinvoke.hpp  string_types.hpp  write_re_memory.hpp
kbf/util/string/: ansi_encode.hpp  byte_to_binary_string.hpp  cvt_utf16_utf8.hpp  ptr_to_hex_string.hpp  to_lower.hpp
kbf/util/versioning/: semantic_version.hpp
kbf/watchers/: fs_watch_action.hpp  fs_watch_listener.hpp  fs_watcher_win.cpp  fs_watcher_win.hpp  kbf_dll_update_listener.cpp  kbf_dll_update_listener.hpp
tutorials/: README.md
tutorials/1. Quick Starts/: 1. Simple Setup Using Existing FBS Presets.md
tutorials/2. Creating Presets/: 1. Creating a Preset.md  2. Creating a Preset Group.md  3. Editing Bones.md
tutorials/3. Using Presets/: 3. Separately Modifying a Specific Player.md  4. Disabling Presets for Your Own Player Only.md
